# comment-sidecar

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml  gulpfile.js  package-lock.json  package.json  pyproject.toml  requirements.txt
adhoc/: comment-payload.json  insert-localhost-comments.py  insert-localhost-dummy-comments.py
adhoc-scripts/: comment-payload.json  comment.sql  script.sh
docs/: before-after-phauer-com.xcf
import/: import_disqus_comments.py
sql/: create-comments-table.sql  init.sql
src/: comment-sidecar-basic.css  comment-sidecar-config.php  comment-sidecar-js-delivery.php  comment-sidecar.js  comment-sidecar.php  common.php  config.php  mail.php  playground-bulma.html  playground.html  unsubscribe.php
src/form-templates/: bootstrap-default.html  bulma-default.html
src/translations/: de.php  en.php  nl.php
test/: Makefile  conftest.py  requirements.txt  test_comment_sidecar.py  test_comment_sidecar_js_delivery.py
