[tool.poetry]
name = "comment-sidecar-tests"
version = "0.1.0"
description = ""
authors = ["Philipp Hauer"]

[tool.poetry.dependencies]
python = "^3.8"
PyMySQL = "^0.9.3"
requests = "^2.23.0"
"path.py" = "^12.4.0"
python-dateutil = "^2.8.1"
assertpy = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"

# TODO
# [tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
