[tool.poetry]
name = "comment-sidecar-tests"
version = "0.1.0"
description = ""
authors = ["Philipp Hauer"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
"path.py" = "^12.4.0"
python-dateutil = "^2.8.1"
assertpy = "^1.0"
mysql-connector-python = "^8.0.20"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
